force-app/main/default/objects/Teacher__c/Teacher__c.object-meta.xml
<CustomObject>
    <label>Teacher</label>
    <nameField>
        <displayFormat>T - {0000}</displayFormat>
        <label>Teacher Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Teachers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>