force-app/main/default/objects/Teacher__c/fields/Teacher_Surname__c.field-meta.xml
<CustomField>
    <fullName>Teacher_Surname__c</fullName>
    <label>Teacher Surname</label>
    <length>50</length>
    <type>Text</type>
</CustomField>